compiler/tools/fpp-syntax/test/include-parse-error.ref.txt
fpp-syntax
[ local path prefix ]/compiler/tools/fpp-syntax/test/parse-error.fpp: 1.1
onstant x = 1
^
  included at [ local path prefix ]/compiler/tools/fpp-syntax/test/include-parse-error.fpp: 1.9
error: unexpected token
